--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,17 @@
     text-decoration: none;
 }
 
-/* #345ba0 */
+:root{
+    --color1: #15046c;
+    --color2: #345ca0;
+    --color3: #345ca046;
+    --color4: #002f6e;
+    --color5: #053f80;
+    --color6: #0a4e92;
+    --color7: #0e5ea3;
+    --color8: #136db5;
+}
+
 
 body {
     font-family: 'poppins', sans-serif;
@@ -31,9 +41,7 @@ header>img {
 
 header,
 .menu,
-section>div,
-.items,
-.cart {
+section>div{
     display: flex;
 }
 
@@ -47,13 +55,13 @@ header {
     max-height: 60px;
     position: fixed;
     width: 100vw;
-    background-color: white;
+    background-color: #fff;
     z-index: 1;
     
 }
 
 header a {
-    color: black;
+    color: #000;
 }
 
 .menu {
@@ -74,19 +82,19 @@ header a {
 .container {
     height: 100vh;
     width: 100%;
-    background-color: #15046c;
+    background-color: var(--color1);
     background-image: url(../img/imagem-de-fundo-desktop-_2_.webp);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom right;
-    color: white;
+    color: #fff;
     display: flex;
     gap: 20px;
     justify-content: center;
     flex-direction: column;
     text-align: justify;
     margin-bottom: 80px;
-    box-shadow: -5px 10px 20px #345ca046;
+    box-shadow: -5px 10px 20px var(--color3);
 }
 
 .container>h1 {
@@ -105,13 +113,14 @@ header a {
 
 
 
-.container>a {
-    background-color: #15046c;
+.container > a {
+    background-color: var(--color2);
     width: 200px;
     padding: 10px 20px;
     border-radius: 20px;
-    color: white;
-    text-align: center
+    color: #fff;
+    text-align: center;
+    box-shadow: 1px 1px 11px -1px #000000;;
 }
 
 .container>h1 {
@@ -173,66 +182,163 @@ section>div::-webkit-scrollbar {
 .cart {
     position: fixed;
     width: 0%;
-    background-color: white;
-    height: 100vh;
-    top: 0;
+    background-color: #f0f2eb;
+    height: calc(100vh - 60px);
+    bottom: 0;
     transition: width 0.2s;
-    justify-content: space-between;
-    flex-direction: column;
-    overflow: scroll;
-    box-shadow: 5px -2px 10px #15046c2a;
+    border-top: 1px solid var(--color1);
     z-index: 1;
+    overflow: hidden;
 }
 
-.cart::-webkit-scrollbar {
-    scroll-padding: 0px;
+
+.cart-header{
+   display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
 }
 
-.cart>.total>button {
-    background-color: #15046c;
-    padding: 5px 50px;
-    border-radius: 20px;
+.cart-header>h2{
+    justify-content: center;
+    margin: auto;
+}
+
+.cart-header > button{
     border: none;
-    color: white;
 }
 
-.cart>.total {
-    margin: 0 auto;
+.cart-header > button > span{
+   font-size: 40px;
+   margin-right: 10px;
+}
+
+.cart-main{
     display: flex;
-    gap: 60px;
+    margin-top: 50px;
+    gap: 100px;
+    margin-left: 50px;
+    align-items: center;
+  justify-content: center;
+    flex-flow: row wrap;
 }
 
-.cart-product {
-    display: flex;
-    gap: 10px;
-    margin-bottom: 30px;
-}
-
-.cart-product>div {
+.cart-main > .cart-content{
+    /* background-color: var(--color8); */
+    overflow: scroll;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     gap: 10px;
+    border-radius: 10px;
+    width: 600px;	
+    padding: 10px;
+    max-height: 378px;
+    /* box-shadow: 2px 2px 8px 1px #00000037; */
 }
 
-.cart-product>img {
-    width: 120px;
+.cart-main > .cart-content::-webkit-scrollbar {
+    width: 0px;
+    background: transparent;
 }
 
-
-
-.btn-qtd {
+.cart-product{
     display: flex;
+    align-items: center;
+    box-shadow: 4px 3px 8px -2px rgba(0, 0, 0, 0.293);
+    border-radius: 20px;
+    background-color: var(--color8);
+    gap: 15px;
+}
+
+.cart-product > div:first-child{
+    display: flex;
+    align-items: center;
+    width: 200px;
     gap: 10px;
 }
 
-.btn-qtd button {
-    border-radius: 5px;
-    border: none;
-    width: 40px;
-    height: 20px;
-    font-weight: bold;
+.img-product{
+    border-radius: 10px 0px 0px 10px;
+    width: 70px;
+    object-fit: cover;
 }
+
+
+.quantidy-control{
+    display: flex;
+    height: 25px;
+    gap: 10px;
+    align-items: center;
+    border: 1px solid black;
+    border-radius: 20px;
+}
+
+.quantidy-control > button{
+    background-color: transparent;
+    border: none;
+    font-size: 20px;
+    padding: 0px 10px;
+}
+
+.quantidy-control button:nth-child(1){
+    border-right: 1px solid black;
+}
+
+.quantidy-control > button:nth-child(3){
+    border-left: 1px solid black;
+}
+
+.quantity{
+    width: 50px;
+    text-align: center;
+    font-size: 16px;
+    border: 2px solid var(--color3);
+    border-radius: 5px;
+    padding: 5px;
+    outline: none;
+}
+
+.resume-cart{
+    background-color: var(--color8);
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    color: #fff;
+    gap: 25px;
+    margin: auto;
+    border-radius: 10px;
+    box-shadow: 2px 2px 8px 1px #00000037;
+}
+
+.resume-cart button:nth-child(2){
+    margin-left: 5px;
+}
+
+.resume-cart button:nth-child(2), .resume-cart input{
+    border: none;
+    padding: 2px 10px;
+    border-radius: 5px;
+}
+
+.resume-cart button:nth-child(6){
+   padding: 10px 20px;
+   border-radius: 10px;
+   border: none;
+}
+
+.resume-cart input{
+    outline: none;
+    
+}
+
+.resume-cart > h3{
+    text-align: center;
+}
+
+.resume-cart div{
+    display: flex;
+    justify-content: space-between;
+}
+
 
 .slide {
     position: relative;
@@ -266,8 +372,8 @@ section>div::-webkit-scrollbar {
     border: none;
     border-radius: 50%;
     padding: 10px;
-    background-color: #15046c;
-    color: white;
+    background-color: var(--color1);
+    color: #fff;
     display: flex;
     top: 50%;
     box-shadow: 5px 5px 10px #15046c3c;
@@ -287,7 +393,7 @@ section>div::-webkit-scrollbar {
     border-radius: 10px 10px 0px 0px;
     width: 600px;
     height: 600px;
-    background-color: white;
+    background-color: #fff;
     position: fixed;
     top: 200%;
     left: 50%;
@@ -344,8 +450,8 @@ section>div::-webkit-scrollbar {
 }
 
 .size-options>button:focus{
-    background-color: #15046c;
-    color: white;
+    background-color: var(--color1);
+    color: #fff;
 }
 
 .modal>.modal-footer {
@@ -355,11 +461,11 @@ section>div::-webkit-scrollbar {
 }
 
 .modal>.modal-footer>button {
-    background-color: #15046c;
+    background-color: var(--color1);
     padding: 15px 50px;
     border-radius: 20px;
     border: none;
-    color: white;
+    color: #fff;
     
 }
 
@@ -376,6 +482,25 @@ section>div::-webkit-scrollbar {
 
     .manual-btn:hover {
         background-color: #555;
+    }
+}
+
+@media (max-width: 1200px) {
+    .cart-main{
+       justify-content: unset;
+       gap: 20px;
+    }
+
+    .cart-main > .cart-content{
+        width: 550px;
+    }
+
+    .cart-main{
+        margin-left: 0px;
+    }
+
+    .cart-content{
+        margin: auto;
     }
 
 }
@@ -435,6 +560,8 @@ section>div::-webkit-scrollbar {
         top: 60%;
     }
 
+
+   
 }
 
 @media (max-width: 650px) {
