--- a/css/style.css
+++ b/css/style.css
@@ -51,27 +51,18 @@ a {
 }
 
 header {
-    gap: 50px;
+    gap: 60px;
     max-height: 60px;
     position: fixed;
     width: 100vw;
     background-color: #fff;
     z-index: 1;
-    
-}
-
-header a {
-    color: #000;
-}
-
-.menu {
     align-items: center;
-    gap: 30px;
 }
 
-.menu>button {
-    background-color: transparent;
-    border: none;
+.menu > ul {
+    display: flex;
+    gap: 30px;
 }
 
 .cart-icon>button {
@@ -163,9 +154,10 @@ section>div {
     margin-left: 20px;
 }
 
-section>div::-webkit-scrollbar {
+section>div::-webkit-scrollbar, .cart::-webkit-scrollbar {
     scroll-padding: 0px;
 }
+
 
 .item {
     display: flex;
@@ -201,7 +193,8 @@ section>div::-webkit-scrollbar {
     transition: width 0.2s;
     border-top: 1px solid var(--color1);
     z-index: 1;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 
@@ -236,7 +229,6 @@ section>div::-webkit-scrollbar {
 }
 
 .cart-main > .cart-content{
-    /* background-color: var(--color8); */
     overflow: scroll;
     display: flex;
     flex-direction: column;
@@ -245,7 +237,6 @@ section>div::-webkit-scrollbar {
     width: 600px;	
     padding: 10px;
     max-height: 378px;
-    /* box-shadow: 2px 2px 8px 1px #00000037; */
 }
 
 .cart-main > .cart-content::-webkit-scrollbar {
@@ -375,6 +366,7 @@ section>div::-webkit-scrollbar {
 .content {
     display: flex;
     width: fit-content;
+    transition: transform 0.5s ease-in-out;
 }
 
 .content>img {
@@ -542,6 +534,32 @@ footer > section:nth-child(2) div > p{
     color: gray;
 }
 
+.form{
+    margin: auto;
+    width: 500px;
+}
+
+.form > h4{
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.form > form{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-bottom: 50px;
+}
+
+.form > form > input{
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid var(--color1);
+    outline: none;
+}
+
+
+
 @media (max-width: 1200px) {
     .cart-main{
        justify-content: unset;
@@ -559,9 +577,6 @@ footer > section:nth-child(2) div > p{
     .cart-content{
         margin: auto;
     }
-
-    
-
 }
 
 
@@ -631,10 +646,11 @@ footer > section:nth-child(2) div > p{
 
     #active{
         top: 60%;
+    } 
+    
+    .form{
+        width: 90%;
     }
-
-
-   
 }
 
 @media (max-width: 650px) {
