--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
     box-sizing: border-box;
     list-style: none;
     box-sizing: border-box;
-    font-family: 'rubik', sans-serif;
+  font-family: 'rubik', sans-serif; 
     font-weight: 600;
     text-decoration: none;
 }
@@ -27,9 +27,7 @@
 }
 
 
-body {
-    font-family: 'poppins', sans-serif;
-}
+
 
 html {
     scroll-behavior: smooth;
@@ -50,6 +48,8 @@ a {
     cursor: pointer;
 }
 
+
+
 header {
     gap: 60px;
     max-height: 60px;
@@ -63,6 +63,10 @@ header {
 .menu > ul {
     display: flex;
     gap: 30px;
+}
+
+.menu > ul > li > a {
+    color: var(--color1);
 }
 
 .cart-icon>button {
@@ -140,24 +144,24 @@ header {
 }
 
 
-
-section>h2 {
-
-    text-indent: 50px;
-
-}
-
 section>div {
     gap: 30px;
     cursor: pointer;
     overflow: scroll;
-    margin-left: 20px;
+    margin-left: 5px;
 }
 
 section>div::-webkit-scrollbar, .cart::-webkit-scrollbar {
     scroll-padding: 0px;
 }
 
+#shoes > section > h2{
+    font-family: "Inter", sans-serif;
+    font-weight: 900;
+    font-style: italic;
+    font-size: 25px;
+    margin-left: 50px;
+} 
 
 .item {
     display: flex;
@@ -258,6 +262,27 @@ section>div::-webkit-scrollbar, .cart::-webkit-scrollbar {
     align-items: center;
     width: 200px;
     gap: 10px;
+}
+
+.cart-btn{
+    position: relative;
+}
+
+.cart-counter {
+    position: absolute;
+    top: -2px;
+    right: 8px;
+    background-color: var(--color1);
+    color: #fff;
+    font-size: 12px;
+    
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
 }
 
 .img-product{
@@ -487,7 +512,7 @@ footer > section:nth-child(1){
     border-top:  1px solid var(--color1);
     display: flex;
     justify-content: center;
-    align-items: center;
+    
     gap: 20px;
     margin-top: 50px;  
 }
